# Music-catalog

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yaml  main.yaml
backend/: alembic.ini
backend/config/: settings.py
backend/migrations/: env.py
backend/migrations/versions/: 2023_09_28_1846-40a48c6c3b58_initial.py  2023_10_03_2103-8337bb999663_changed_user_model.py  d6b7bf407c28_initial_migration.py
backend/music_catalog/: __init__.py  models.py  views.py
backend/music_catalog/controllers/: base.py  utils.py
backend/music_catalog/forms/: forms.py
backend/music_catalog/models/: __init__.py  catalogs.py  menus.py  users.py
backend/music_catalog/static/css/: style.css
backend/music_catalog/templates/: about.html  albums.html  base.html  contact.html  index.html  login.html  profile.html  register.html  singers.html  songs.html
backend/music_catalog/templates/errors/: 40x.html
backend/requirements/: base.txt  development.txt  production.txt
infra/: docker-compose.yml
infra/backend/: Dockerfile
