[tool.poetry]
name = "music_catalog"
version = "0.1.0"
description = "простое приложение коллекции аудиозаписей."
authors = ["Kozin <kaf-artem@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
flask = "^2.3.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
alembic = "^1.12.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
"exclude" = [
    "migrations",
]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402", "F403"]

[tool.flake8]
"exclude" = [
    ".git",
    ".vscode",
    ".idea",
    "venv",
    "__pycache__",
    "infra",
    "migrations",
    "config"
]
per-file-ignores = [
"./backend/config/settings.py:E501",
"./backend/music_catalog/__init__.py:F401,E402,F403",
"./backend/music_catalog/models/__init__.py:F401,E402,F403"
]

[tool.isort]
"profile" = "django"
"skip" = ["venv", "migrations", "__init__.py"]
"src_paths" = ["backend"]
